<resources>
    <string name="app_name">MyappSQLite</string>
    <string name="textView">Registro de pacientes</string>
    <string name="txt_id">ID del paciente</string>
    <string name="txt_nombreP">Nombre del paciente</string>
    <string name="txt_padecimiento">Padecimiento</string>
    <string name="btn_create">Registra</string>
    <string name="btn_read">Buscar</string>
    <string name="btn_update">Actualiza</string>
    <string name="btn_delete">Elimina</string>
</resources>
