<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textView"
        android:textSize="30sp"
        android:textColor="@color/bgColor"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <EditText
        android:id="@+id/txt_id"
        android:layout_width="282dp"
        android:layout_height="44dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/txt_id"
        android:inputType="number"
        android:text=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <EditText
        android:id="@+id/txt_nombreP"
        android:layout_width="282dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="@string/txt_nombreP"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txt_padecimiento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_id" />

    <EditText
        android:id="@+id/txt_padecimiento"
        android:layout_width="282dp"
        android:layout_height="44dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="@string/txt_padecimiento"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_create"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:text="@string/btn_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />


    <Button
        android:id="@+id/btn_read"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:text="@string/btn_read"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:text="@string/btn_update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_create" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:text="@string/btn_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_read" />

    <Button
        android:id="@+id/btn_lector"
        android:layout_width="38dp"
        android:layout_height="21dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/ic_add_a_photo_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <Button
        android:id="@+id/btn_borraDatos"
        android:layout_width="38dp"
        android:layout_height="21dp"
        android:background="@drawable/ic_clear_black_24dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_lector"
        app:layout_constraintVertical_bias="0.356" />


</androidx.constraintlayout.widget.ConstraintLayout>